Support locales for user attribute
